# voxel-factory

./: .clang-format  .gitignore  CMakeLists.txt  README.md  shell.nix
doc/: Design.md
extensions/example/: CMakeLists.txt
extensions/example/include/: gdexample.hpp  register_types.hpp
extensions/example/src/: gdexample.cpp  register_types.cpp
extensions/voxel/: CMakeLists.txt
extensions/voxel/include/: chunk.hpp  gdvoxel.hpp  register_types.hpp  world.hpp
extensions/voxel/src/: chunk.cpp  gdvoxel.cpp  register_types.cpp  world.cpp
game/: icon.svg.import  project.godot  world.tscn
game/assets/icons/: icon.svg.import
game/assets/textures/: apple.png.import  arrow.png.import  axe_bronze.png.import  axe_diamond.png.import  axe_gold.png.import  axe_iron.png.import  axe_silver.png.import  boat.png.import  bow.png.import  bowArrow.png.import  bowl.png.import  brick_grey.png.import  brick_red.png.import  cactus_inside.png.import  cactus_side.png.import  cactus_top.png.import  clouds.png.import  cotton_blue.png.import  cotton_green.png.import  cotton_red.png.import  cotton_tan.png.import  dirt.png.import  dirt_grass.png.import  dirt_sand.png.import  dirt_snow.png.import  fence_stone.png.import  fence_wood.png.import  fish.png.import  fish_cooked.png.import  fishingPole.png.import  flail_bronze.png.import  flail_diamond.png.import  flail_gold.png.import  flail_iron.png.import  flail_silver.png.import  glass.png.import  glass_frame.png.import  grass1.png.import  grass2.png.import  grass3.png.import  (+117 more)
game/scenes/: chunk.tscn  player.tscn  world.tscn
game/scripts/: chunk.gd  player.gd
lib/tests/src/: test.cpp
lib/voxelfactory/: CMakeLists.txt
lib/voxelfactory/include/: voxelfactory.hpp
lib/voxelfactory/src/: voxelfactory.cpp
